fixes: hyperlink color not visible, lag, and ball never initialized with y-vel < 0

--- a/wwwroot/pong/pong.css
+++ b/wwwroot/pong/pong.css
@@ -140,6 +140,10 @@ canvas {
     transition: opacity 1s;
 }
 
+#hint a {
+    color: turquoise;
+}
+
 .hidden {
     visibility: hidden;
 }
